--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -26,6 +26,7 @@
                 
              
                 <p><small class="text-muted"><strong>Posted by: </strong><%=recipe.user.email%></small></p>
+                <p class= "card-text"> <strong> Category </strong> <%=recipe.categories.name%> </p>
                 <p class= "card-text"> <strong> Duration: </strong> <%=recipe.prep_time_minutes%> </p>
                 <p class= "card-text"> <strong> Description:</strong> <%=recipe.description%> </p>
                 <hr>
