--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -2,11 +2,16 @@
   <div class="container">
 
     <h1> <%=@recipe.title%></h1>
+    <h5> Categories: </h5>
+    <%@recipe.categories.each do |category| %>
+    <%= category.name %>
+    <%end%>
+
      <p> Submitted by: <%=@recipe.user.email%></p>  
     <p> <h5> Ingredients: </h5> <%=@recipe.ingredients%></p>  
     <p> <h5> Preperation Time: </h5> <%=@recipe.prep_time_minutes%> Minutes</p>
     <p> <h5> Description: </h5> <%=@recipe.description%></p> 
-
+    
    </div>
 </div>
 
