added images to recipes, and added carousel to recipe view page

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -22,5 +22,7 @@
 
   <%= form.label :description, style: 'margin-top: 1%'  %>
   <%= form.text_area :description, class: 'form-control mb-2', size: '50x10'%>
+
+  <%= form.file_field :recipe_images, multiple: true %>
   <%= form.submit"Submit your recipe", class: "btn btn-primary mt-5" %>
 <%end%>
