--- a/app/views/recipes/_category_fields.html.erb
+++ b/app/views/recipes/_category_fields.html.erb
@@ -1,3 +1,5 @@
-
+<div class ="nested-fields">
 <%= f.label "Category", style: 'margin-top: 1%' %>
 <%= f.text_field :name , class: 'form-control col-md-2' %>
+<%= link_to_remove_association "Remove Category", f %>
+</div>
