--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,21 +23,35 @@
             <li class="nav-item active">
               <a class="nav-link" href="/recipes/new">Submit a New Recipe</a>
             </li>
-            <%  if current_user %>
-            <%= link_to "Logout",  logout_path, method: :delete, class:"nav-link active" %>
-            <% else %>
-            <%= link_to "Login",  login_path, method: :get, class:"nav-link active" %>
-            <%end%>
-<!--             <li class="nav-item active">
-              <a class="nav-link" href="#">Services</a> -->
-            </li>
+
             <li class="nav-item active">
-<!--               <a class="nav-link" href="#">Contact</a> -->
+              <%  if current_user.admin? %>
+                <%= link_to "View unverified Recipes",  list_unverified_recipes_path, method: :get, class:"nav-link active" %>
+              <%end%>
             </li>
+
+            <li class="nav-item active">
+              <%  if current_user %>
+                <%= link_to "Logout",  logout_path, method: :delete, class:"nav-link active" %>
+              <% else %>
+                <%= link_to "Login",  login_path, method: :get, class:"nav-link active" %>
+              <%end%>
+            </li>
+
           </ul>
         </div>
       </div>
     </nav>
+
+      <div id="flash">
+    <% flash.each do |key, value| -%>
+      <% if key == "success"%>
+        <div id="flash_<%= key %>" class="alert alert-success" role="alert"><%=h value %></div>
+      <% else %>
+        <div id="flash_<%= key %>" class="alert alert-danger" role="alert"><%=h value %></div>
+      <% end %>
+    <% end %>
+  </div>
 
     <%= yield %>
   </body>
