--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -38,24 +38,44 @@
     <%= category.name %>
     <%end%>
 
-     <p> Submitted by: <%=@recipe.user.email%></p>  
+    <p> Submitted by: <%=@recipe.user.email%></p>  
+    <% if current_user.admin? %>
+      <% if @recipe.verified? %>
+        <p  style="color: green"><strong>Verification Status: </strong> Verified.</p>
+      <%else%>
+        <p  style="color: red"><strong>Verification Status: </strong> Unverified.</p>
+      <%end%>
+    <%end%>
+
+
+
+
     <p> <h5> Ingredients: </h5> <%=@recipe.ingredients%></p>  
     <p> <h5> Preperation Time: </h5> <%=@recipe.prep_time_minutes%> Minutes</p>
     <p> <h5> Description: </h5> <%=@recipe.description%></p> 
   <hr>
-  <% if @recipe.user == current_user %>
-    <div class ="row">
-      <div class= "col-lg-2">
-      <%=button_to "Edit Recipe", edit_recipe_path(@recipe), :class=>"btn btn-warning",:method => "get"%>
-    </div>
 
-       <div class= "col">
-      <%=button_to 'Delete Recipe', recipe_path(@recipe), :class=>"btn btn-danger",
+  <% if (@recipe.user == current_user ) || (current_user.admin?) %>
+  <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+    <div class="btn-group btn-group-lg" role="group" aria-label="...">
+
+      <%=link_to "Edit Recipe", edit_recipe_path(@recipe), :class=>"btn btn-info",:method => "get"%>
+
+      <%=link_to 'Delete Recipe', recipe_path(@recipe), :class=>"btn btn-danger",
           method: :delete,
           data: { confirm: 'Are you sure?' } %>
-      </div>
-    </div>
   <%end%>
+      <% if current_user.admin? %>
+          <%=link_to 'Verfiy Recipe', verify_recipe_path(@recipe), :class=>"btn btn-success ",
+              method: :put %>
+
+          <%=link_to 'Unverfiy Recipe', unverify_recipe_path(@recipe), :class=>"btn btn-warning",
+              method: :put %>
+      <%end%>
+
+    </div>
+  </div>
+
   <hr>
 
 
