--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -56,7 +56,7 @@
   <hr>
 
   <% if (@recipe.user == current_user ) || (current_user.admin?) %>
-  <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+  <div class="btn-toolbar mb-5" role="toolbar" aria-label="Toolbar with button groups">
     <div class="btn-group btn-group-lg" role="group" aria-label="...">
 
       <%=link_to "Edit Recipe", edit_recipe_path(@recipe), :class=>"btn btn-info",:method => "get"%>
@@ -76,24 +76,35 @@
     </div>
   </div>
 
+
+      <%= form_tag(get_ingredients_recipe_path(@recipe), method: "put") do %>
+        <%= label_tag(:number, "Send ingredients to phone number") %>
+        <%= text_field_tag(:number) %>
+        <%= submit_tag("Submit Number", :class => "btn btn-warning") %>
+      <% end %>
+
+
+
+
   <hr>
 
 
    <h5> Comments: </h5>
-
+<div class ="container">
    <% @recipe.comments.each do |comment| %>
-     <div class = "row">
+     <div class = "row border">
         <div class = "col-sm-2">
-          <p>Posted by:<%=comment.user.name%></p>
-          <p><%=comment.created_at.to_s(:short)%></p>
+          <p><small>Posted by: <%=comment.user.email%></small></p>
         </div>
+
         <div class ="col">
-       <p><%=comment.description%></p>
-       
-       </div>
+          <p><small><%=comment.created_at.to_s(:short)%></small></p>
+          <p><%=comment.description%></p>
+        </div>
+
      </div>
    <%end%>
-
+</div>
 
 
   <%= form_for [@recipe, Comment.new]  do |form|%>
