--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-
+          <%  if current_user %>
             <li class="nav-item active">
               <a class="nav-link" href="/recipes/new">Submit a New Recipe</a>
             </li>
@@ -27,14 +27,14 @@
             <li class="nav-item active">
               <%  if current_user.admin? %>
                 <%= link_to "View unverified Recipes",  list_unverified_recipes_path, method: :get, class:"nav-link active" %>
-              <%end%>
+              <% end %>
             </li>
 
             <li class="nav-item active">
-              <%  if current_user %>
-                <%= link_to "Logout",  logout_path, method: :delete, class:"nav-link active" %>
+                <%= link_to "Logout",  logout_path, method: :get, class:"nav-link active" %>
               <% else %>
                 <%= link_to "Login",  login_path, method: :get, class:"nav-link active" %>
+                <%= link_to "Signup",  signup_path, method: :get, class:"nav-link active" %>
               <%end%>
             </li>
 
