--- a/app/views/recipes/_recipes_list.html.erb
+++ b/app/views/recipes/_recipes_list.html.erb
@@ -12,14 +12,13 @@
                 <h5 class="card-title"><strong> <%= link_to recipe.title,recipe_path(recipe)%></strong></h5>
                 <p><small class="text-muted"><strong>Posted by: </strong><%=recipe.user.email%></small></p>
 
-                <% if current_user.admin? %>
+                <% if current_user && current_user.admin? %>
                   <% if recipe.verified? %>
                     <p  style="color: green"><small><strong>Verification Status: </strong> Verified.</small></p>
                   <%else%>
                     <p  style="color: red"><small><strong>Verification Status: </strong>Unverified.</small></p>
                   <%end%>
                 <%end%>
-
                 
                 <p class= "card-text"> <strong> Categories: </strong><%= recipe.categories.pluck(:name).join(',') %></p>
 
